--- a/_config.yml
+++ b/_config.yml
@@ -18,33 +18,13 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
----
-output:
-  pdf_document:
-    latex_engine: pdflatex
-    template: ~/Dropbox/miscelanea/svm-r-markdown-templates/svm-latex-cv.tex
-geometry: margin=1in
-
-title: "CV"
-author: William Sealy Gosset
-
-jobtitle: "Chief Brewer, Arthur Guinness & Son"
-address: "Guinness Brewery · Park Royal · London NW10 7RR, UK"
-fontawesome: yes
-email: guinness@consumer-care.net
-# github: svmiller
-phone: "+353 1 408 4800"
-web: guinness.com
-updated: no
-
-keywords: R Markdown, academic CV, template
-
-fontfamily: mathpazo
-fontfamilyoptions: sc, osf
-fontsize: 11pt
-linkcolor: blue
-urlcolor: blue
----
+title: Bienvenido
+email: st.jacob1992@gmail.com
+description: >- # this means to ignore newlines until "baseurl:"
+  CV Jacob Velarde Neri
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
+github_username:  jacobvelarde
 
 # Build settings
 theme: minima
