--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Bienvenido
+title: Jacob Velarde Neri
 email: st.jacob1992@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   CV Jacob Velarde Neri
